--- a/casset/src/App.css
+++ b/casset/src/App.css
@@ -78,20 +78,22 @@
   background-color: #434a5a;
   color: white;
   border: none;
-  padding: 1vh 2.58vh;
+  height: 5.55vw;
+  width: 21.5vw;
   font-size: 3vw; 
   font-weight: 750;
-  border-radius: 10px; 
+  border-radius: 0.8vw;
 }
 
 #SpotifyButton {
   background-color: #434a5a;
   color: white;
   border: none;
-  padding: 1.35vh 2.5vh;
+  height: 5.55vw;
+  width: 21.5vw;
   font-size: 2.75vw;
   font-weight: 750;
-  border-radius: 10px; 
+  border-radius: 0.8vw;
 }
 
 #GoogleButton:hover,
